# alex

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  gameplan.md
backend/: deploy_all_lambdas.py  test_full.py  test_multiple_accounts.py  test_scale.py  test_simple.py  watch_agents.py
backend/api/: main.py
backend/charter/: agent.py  lambda_handler.py  package_docker.py  pyproject.toml  test_full.py  test_simple.py
backend/database/: pyproject.toml  reset_db.py  run_migrations.py  seed_data.py  test_connection.py  verify_database.py
backend/database/migrations/: 001_schema.sql
backend/database/src/: __init__.py  client.py  models.py
backend/ingest/: cleanup_s3vectors.py  ingest_s3vectors.py  package_docker.py  pyproject.toml
backend/planner/: agent.py  aurora_config.json  lambda_handler.py  market.py  package_docker.py  prices.py  pyproject.toml  test_full.py  test_simple.py
backend/reporter/: agent.py  judge.py  lambda_handler.py  package_docker.py  pyproject.toml  templates.py  test_full.py  test_simple.py
backend/researcher/: Dockerfile  deploy.py  mcp_servers.py  pyproject.toml  server.py  test_research.py
backend/retirement/: agent.py  lambda_handler.py  package_docker.py  pyproject.toml  (+2 more)
context/: architecture-context.md  code-standards.md  progress-tracker.md  project-overview.md  ui-context.md
docs/: ISSUES_FIXED.md  agent_architecture.md  app-router-migration.md  apprunner_migration.md  architecture.md  researcher-overview.md  scheduler-explainer.md
guides/: agent_architecture.md  architecture.md
terraform/: README.md
(+52 files in other folders)
