[project]
name = "alex-database"
version = "0.1.0"
description = "Database package for Alex Financial Planner with Supabase"
requires-python = ">=3.12"
dependencies = [
    "supabase>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
